Fix code overflow on blogs

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,6 +49,12 @@ a:hover {
 	cursor: pointer;
 }
 
+pre {
+	overflow: auto;
+	word-wrap: normal;
+	white-space: pre;
+}
+
 /* Start purging... */
 @tailwind components;
 /* Stop purging. */
